log
Tue Mar 16 21:55:18 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation failed
Tue Mar 16 21:55:23 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5e14e50
